syntax = "proto3";

option java_package = "com.apivideo.grpc";
option java_outer_classname = "LikesProto";
option objc_class_prefix = "AVP";

package likes;

// The request message containing the like details.
message LikeRequest {
  int32 like_id = 1;
  int32 video_id = 2;
  int32 user_id = 3;
}

// The response message containing the status of the request.
message LikeResponse {
  int32 status = 1;
  string message = 2;
}

// The response message for like count.
message LikeCountResponse {
  int32 count = 1;
}

// The like service definition.
service LikeService {
  // Adds a new like
  rpc AddLike (LikeRequest) returns (LikeResponse);

  // Retrieves a like by ID
  rpc GetLike (LikeRequest) returns (LikeRequest);

  // Deletes a like by ID
  rpc DeleteLike (LikeRequest) returns (LikeResponse);

  // Updates an existing like
  rpc UpdateLike (LikeRequest) returns (LikeResponse);

  // Counts likes by user ID and video ID
  rpc CountByUserIdAndVideoId (LikeRequest) returns (LikeCountResponse);
}
